<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.udacity.shoestore.login.model.LoginViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginConstraintLayout"
        style="@style/LabelStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.ui.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inputConstraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/email_text"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:labelFor="@id/email_edit"
                android:text="@string/login_email_label"
                app:layout_constraintBaseline_toBaselineOf="@+id/email_edit"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/email_edit"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginTop="@dimen/layout_margin"
                android:layout_marginEnd="@dimen/layout_margin"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:text="@={loginViewModel.email}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/password_text"
                app:layout_constraintTop_toTopOf="parent">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/password_text"
                style="@style/LabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:labelFor="@id/password_edit"
                android:text="@string/login_password_label"
                app:layout_constraintBaseline_toBaselineOf="@+id/password_edit"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/password_edit"
                style="@style/EditTextStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginTop="@dimen/layout_margin"
                android:layout_marginEnd="@dimen/layout_margin"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:text="@={loginViewModel.password}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/password_text"
                app:layout_constraintTop_toBottomOf="@+id/email_edit"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/sign_up_button"
                style="@style/CommandButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginTop="64dp"
                android:layout_marginBottom="@dimen/layout_margin"
                android:onClick="@{() -> loginViewModel.signUp()}"
                android:text="@string/login_signup_button_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/sign_in_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_text" />

            <Button
                android:id="@+id/sign_in_button"
                style="@style/CommandButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/layout_margin"
                android:layout_marginBottom="@dimen/layout_margin"
                android:onClick="@{() -> loginViewModel.signIn()}"
                android:text="@string/login_signin_button_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toEndOf="@+id/sign_up_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/login_header"
            style="@style/HeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_header"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.120000005" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


